--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@ body {
   margin: 0;
 }
 
-.hide {
-  display: none;
-}
-
 p, .description{
   font-size: 16px;
   line-height: 24px;
@@ -138,10 +134,11 @@ footer a:hover{
   position: absolute;
   top: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100vw;
   display: flex;
   
   justify-content: center;
+  transition: 400ms;
 }
 #modal .content{
   margin-top: 128px;
@@ -150,4 +147,95 @@ footer a:hover{
 #modal .content h1{
   text-align: center;
   text-transform: uppercase;
+}
+
+#modal form {
+  width: 80%;
+  max-width: 800px;
+
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  gap: 20px;
+}
+.content form div:nth-child(3),
+.content form div:nth-child(4),
+.content form div:nth-child(5){
+  grid-column: span 2;
+}
+
+form input, form textarea{
+  width: 100%;
+
+
+  padding: 8px;
+  box-sizing: border-box;
+  border-radius: 6px;
+  border: 1px solid #da1744;
+
+  outline: none;
+  font-size: 16px;
+}
+
+form a{
+
+  width: 150px;
+  height: 40px;
+
+  background-color: #ffffff22;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 14px;
+  font-weight: bold;
+  align-self: end;
+  border-radius: 6px;
+  transition: 400ms;
+  
+}
+
+form a:hover{
+  background: #fff;
+  color: #ff5e84;
+
+  text-decoration: none;
+}
+
+form label {
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0.8px;
+}
+
+form button{
+  background: white;
+
+  width: 150px;
+  height: 40px;
+
+  border-radius: 6px;
+
+  cursor: pointer;
+  margin-top: 32px;
+
+  grid-column: 2;
+  justify-self: end;
+  transition: 400ms;
+
+}
+
+form button:hover {
+  background-color: #0984e3;
+  color: white;
+
+  text-decoration: none;
+  
+}
+
+#modal.hide{
+  opacity: 0;
+  visibility: hidden;
 }
