--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
 }
 
+
 p, .description{
   font-size: 16px;
   line-height: 24px;
@@ -86,9 +87,9 @@ footer a{
 }
 
 a {
-  font-weight: 400;
   color: #ff5e84;
   text-decoration: none;
+  font-weight: bold;
 }
 
 footer a:hover{
@@ -100,7 +101,7 @@ footer a:hover{
   display: flex;
 
   margin-bottom: 32px;
-  padding: 32px;
+  padding: 17px;
 
   background-color: #fff;
   border-radius: 8px;
@@ -133,13 +134,16 @@ footer a:hover{
   background: #ff5e84;
   position: absolute;
   top: 0;
-  width: 100vw;
-  height: 100vw;
+  right: 0;
+  height: 99vw;
+  left: 0;
   display: flex;
   
   justify-content: center;
   transition: 400ms;
 }
+
+
 #modal .content{
   margin-top: 128px;
   color: white;
@@ -238,4 +242,78 @@ form button:hover {
 #modal.hide{
   opacity: 0;
   visibility: hidden;
+}
+
+/* Ideias.html */
+#page-ideas #container{
+  display: block;
+}
+#page-ideas header{
+  display: flex;
+  justify-content: space-between;
+}
+
+#page-ideas nav{
+  display: flex;
+  align-items: center;
+}
+
+#page-ideas nav li{
+  list-style-type: none;
+  margin-right: 16px;
+}
+#page-ideas nav li a{
+  color: black;
+  font-weight: bold;
+}
+
+#page-ideas nav li:last-child{
+  margin: 0;
+}
+#page-ideas nav li:last-child a{
+  width: 150px;
+  height: 40px;
+  background-color: #ff5e84;
+
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+}
+#page-ideas nav li:last-child a:hover{
+  background-color: #0984e3;
+  text-decoration: none;
+}
+
+#page-ideas section#title{
+  text-align: center;
+  margin: 64px 0;
+}
+
+#page-ideas section#title p{
+  opacity: 0.6;
+  margin: 0;
+}
+#page-ideas section#title h1{
+  margin: 0;
+  font-size: 28px;
+}
+
+#page-ideas section#ideas{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+
+}
+
+#page-ideas section#ideas .idea{
+  margin: 0;
+}
+
+#page-ideas section#title, section#ideas, footer {
+  margin-top: 64px;
 }
